# UGKS2D

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  box.cpp  noozle_from_last_result.cpp  simple_supersonic_nozzle.cpp
examples/block/: init.json
examples/box/: init.json
examples/nozzle/: init10.9.json  init11.5.json  init12.0.json
examples/rare_chamber/: init.json  init_precise.json
examples/restart/: init_box.json
src/: block_solver.cpp  global.h  init.json  main.cpp  simple_supersonic_nozzle.cpp  solver.cpp  solver.h  tools.cpp  tools.h
